# Clabs

./: CMakeLists.txt  File.txt  Kurs3.c  Kurs4.c  Kurs7.c  Kurs8.c  Kurs9.c  Lab11.c  Lab12.c  Lab13.c  Lab14.c  Lab15.c  Lab23.c  Lab24.c  Lab9.c  main.c  stack.c  stack.h  table.h
