cmake_minimum_required(VERSION 3.14)
project(Clabs)

set(CMAKE_CXX_STANDARD 17)

add_executable(Clabs main.c)
add_executable(Lab11 Lab11.c)
add_executable(Lab12 Lab12.c)
add_executable(Lab9 Lab9.c)
add_executable(Lab13 Lab13.c)
add_executable(main main.c)
add_executable(cmake_install cmake-build-debug/cmake_install.cmake)