cmake_minimum_required(VERSION 3.14)
project(Clabs)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lab11 Lab11.c)
add_executable(Lab12 Lab12.c)
add_executable(Lab9 Lab9.c)
add_executable(Lab13 Lab13.c)
add_executable(main main.c)
add_executable(Kurs3 Kurs3.c)
add_executable(Lab15 Lab15.c)
add_executable(Lab14 Lab14.c)
add_executable(Kurs4 Kurs4.c)
add_executable(Lab23 Lab23.c)
add_executable(Lab24 Lab24.c stack.h stack.c)